--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -116,7 +116,7 @@ deploy_prod:
     - docker:dind
   script:
    - echo "Deploying to Production..."
-   - docker-compose -f docker-compose.prod.yml up -d --build
+   - docker-compose -f docker-compose.prod.yml -f docker-compose.prod.override.yml up -d --build
    - sleep 15 # wait for services to start
    - docker-compose ps
    - docker-compose logs web
