--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -122,6 +122,7 @@ deploy_prod:
    - sleep 15               # wait for services to start
    - docker-compose ps
    - docker-compose logs web
+   - docker ps
    - docker-compose exec -T web curl -f http://web:80/ || (echo "Health check failed!" && exit 1)
    - docker-compose exec -T web curl -f http://web:80/docs || (echo "Docs endpoint check failed!" && exit 1)
    - echo "Deployment to Production successful!"
