--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -37,7 +37,6 @@ build:
     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:$IMAGE_TAG"
   only:
     - main
-  when: manual
 
 unit-test:
   stage: test
@@ -112,13 +111,14 @@ deploy_dev:
 
 deploy_prod:
   stage: deploy_prod
-  image: docker:latest
+  #image: docker:latest
+  image: $DOCKER_REGISTRY_USER/fastapi-prod:$IMAGE_TAG
   services:
     - docker:dind
   script:
    - echo "Deploying to Production..."
    #- docker-compose -f docker-compose.prod.yml -f docker-compose.prod.override.yml up -d --build
-   - docker-compose -f docker-compose.prod.yml up -d --build
+   #- docker-compose -f docker-compose.prod.yml up -d --build
    - sleep 15               # wait for services to start
    - docker-compose ps
    - docker-compose logs web
