--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -4,6 +4,7 @@ stages:
   - test
   - deploy_dev
   - deploy_prod
+  - secure_deploy_prod
 
 variables:
   IMAGE_TAG: latest
@@ -37,7 +38,6 @@ build:
     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:$IMAGE_TAG"
   only:
     - main
-
 
 unit-test:
   stage: test
@@ -108,7 +108,6 @@ deploy_dev:
   only:
     - main
     - develop
-  when: manual
 
 deploy_prod:
   stage: deploy_prod
@@ -124,8 +123,8 @@ deploy_prod:
    - docker ps -a
    - docker-compose exec -T web curl -f http://web:80/ || (echo "Health check failed!" && exit 1)
    - docker-compose exec -T web curl -f http://web:80/docs || (echo "Docs endpoint check failed!" && exit 1)
-   - docker-compose exec -T web curl -v https://fastapi-traefik.prod-fastapi.ip-ddns.com
-   - docker-compose exec -T web curl -v https://dashboard-fastapi-traefik.prod-fastapi.ip-ddns.com -u testuser:$$apr1$$jIKW.bdS$$eKXe4Lxjgy/rH65wP1iQe1
+   #- docker-compose exec -T web curl -v https://fastapi-traefik.prod-fastapi.ip-ddns.com
+   #- docker-compose exec -T web curl -v https://dashboard-fastapi-traefik.prod-fastapi.ip-ddns.com -u testuser:$$apr1$$jIKW.bdS$$eKXe4Lxjgy/rH65wP1iQe1
    - echo "Deployment to Production successful!"
   environment:
     name: Production
@@ -134,3 +133,21 @@ deploy_prod:
     - main
   when: manual
 
+deploy_to_production:
+  stage: secure_deploy_prod
+  image: docker:27-cli
+  script:
+    - echo "Deploying to Production (host Docker)"
+    - docker compose -f docker-compose.prod.yml up -d --build
+    - sleep 20
+    # Public HTTPS checks (from CI runner to your domain)
+    - DOMAIN=fastapi-traefik.prod-fastapi.ip-ddns.com
+    - curl -fsSIL "https://$DOMAIN" || (echo "public HTTPS failed" && exit 1)
+    - openssl s_client -servername "$DOMAIN" -connect "$DOMAIN:443" </dev/null 2>/dev/null | openssl x509 -noout -issuer -subject -dates
+    #- curl -fsSIL -u "testuser:${DASHBOARD_PASSWORD}" "https://dashboard-fastapi-traefik.prod-fastapi.ip-ddns.com" || (echo "Dashboard failed" && exit 1)
+  environment:
+    name: Production
+    url: https://fastapi-traefik.prod-fastapi.ip-ddns.com
+    only:
+      - main
+    when: manual
