--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -108,6 +108,7 @@ deploy_dev:
   only:
     - main
     - develop
+  when: manual
 
 deploy_prod:
   stage: deploy_prod
@@ -123,8 +124,6 @@ deploy_prod:
    - docker ps -a
    - docker-compose exec -T web curl -f http://web:80/ || (echo "Health check failed!" && exit 1)
    - docker-compose exec -T web curl -f http://web:80/docs || (echo "Docs endpoint check failed!" && exit 1)
-   #- docker-compose exec -T web curl -v https://fastapi-traefik.prod-fastapi.ip-ddns.com
-   #- docker-compose exec -T web curl -v https://dashboard-fastapi-traefik.prod-fastapi.ip-ddns.com -u testuser:$$apr1$$jIKW.bdS$$eKXe4Lxjgy/rH65wP1iQe1
    - echo "Deployment to Production successful!"
   environment:
     name: Production
@@ -140,6 +139,8 @@ deploy_to_production:
     - echo "Deploying to Production (host Docker)"
     - docker compose -f docker-compose.prod.yml up -d --build
     - sleep 20
+    - docker-compose ps
+    - docker-compose logs web
     # Public HTTPS checks (from CI runner to your domain)
     - DOMAIN=fastapi-traefik.prod-fastapi.ip-ddns.com
     - curl -fsSIL "https://$DOMAIN" || (echo "public HTTPS failed" && exit 1)
