--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
+    command: > 
+     uvicorn app.main:app --host 0.0.0.0 --port 80
     expose:
       - 80
     environment:
