--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,6 +2,8 @@ FROM tiangolo/uvicorn-gunicorn:python3.11-slim
 
 RUN apt-get update && apt-get install -y netcat-traditional
 
+RUN apt-get install -y postgresql-client && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
@@ -9,5 +11,9 @@ RUN pip install -r requirements.txt
 RUN apt-get update && apt-get install -y curl
 
 RUN apt-get install -y docker-compose
+
+COPY entrypoint.sh /start.sh
+RUN chmod +x /start.sh
+CMD ["/start.sh"]
 
 COPY . .
