--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
-    command: > 
-     uvicorn app.main:app --host 0.0.0.0 --port 80
+    #command: > 
+    # uvicorn app.main:app --host 0.0.0.0 --port 80
     expose:
       - 80
     environment:
@@ -38,6 +38,11 @@ services:
       - POSTGRES_USER=fastapi_traefik_prod
       - POSTGRES_PASSWORD=fastapi_traefik_prod
       - POSTGRES_DB=fastapi_traefik_prod
+    healthcheck:
+       test: ["CMD-SHELL","pg_isready -U $${POSTGRES_USER}"]
+       interval: 5s
+       timeout: 2s
+       retries: 10
 
   traefik:
     build:
