--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -145,9 +145,20 @@ deploy_to_production:
          sudo apt-get install docker-compose -y;
       fi
     - docker-compose version
+    - docker compose -f docker-compose.prod.yml down
   script:
     - echo "Deploying to Production (host Docker)"
-    - docker-compose -f docker-compose.prod.yml up -d --build
+    - |
+      cat > docker-compose.override.yml <<EOF
+      version: "3.8"
+      services:
+        traefik:
+          ports:
+            - "8080:80"
+            - "8443:443"
+      EOF
+    - docker compose -f docker-compose.prod.yml -f docker-compose.override.yml up -d --build
+    #- docker-compose -f docker-compose.prod.yml up -d --build
     - sleep 20
     - docker-compose ps
     - docker-compose logs web
