--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -146,6 +146,9 @@ deploy_to_production:
       fi
     - docker-compose version
     - docker-compose -f docker-compose.prod.yml down
+    - mkdir -p ./certificates
+    - touch ./certificates/acme.json
+    - sudo chmod 600 ./certificates/acme.json
   script:
     - echo "Deploying to Production (host Docker)"
     - |
