--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -140,17 +140,18 @@ deploy_to_production:
    - runner_fastapi_project_second
   image: docker:27-cli
   before_script:
+    - echo "Preparing Traefik certificate folder..."
+    - mkdir -p /home/gitlab-runner/traefik-public-certificates
+    - touch /home/gitlab-runner/traefik-public-certificates/acme.json
+    - chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
+    - chmod 700 /home/gitlab-runner/traefik-public-certificates
     - echo "Installing depencies"
-    - sudo rm -f ./traefik-public-certificates/acme.json
     - if ! command -v docker-compose &> /dev/null; then
          sudo apt-get install docker-compose -y;
       fi
     - docker-compose version
     - docker-compose -f docker-compose.prod.yml down
-    # - mkdir -p ./traefik-public-certificates
-    # - touch ./traefik-public-certificates/acme.json
-    # - sudo chmod 600 ./traefik-public-certificates/acme.json
-    # - sudo chmod 644 ./traefik-public-certificates/acme.json
+ 
   script:
     - echo "Deploying to Production (host Docker)"
     - |
@@ -178,6 +179,7 @@ deploy_to_production:
     - curl -kfsSIL "https://$DOMAIN" || (echo "public HTTPS failed" && exit 1)
     - openssl s_client -servername "$DOMAIN" -connect "$DOMAIN:443" </dev/null 2>/dev/null | openssl x509 -noout -issuer -subject -dates
     #- curl -fsSIL -u "testuser:${DASHBOARD_PASSWORD}" "https://dashboard-fastapi-traefik.prod-fastapi.ip-ddns.com" || (echo "Dashboard failed" && exit 1)
+    - echo "Deployment and security with Let's Encrypt successful!"
   environment:
     name: Production
     url: https://fastapi-traefik.prod-fastapi.ip-ddns.com
