--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,7 +26,7 @@ services:
       - "traefik.http.routers.fastapi.tls.certresolver=letsencrypt"
 
       # Ensure traffic gets forwarde to the app's exposed port 80
-      - "traefik.http.services.fastapi.loadbalancer.server.port=80"
+      #- "traefik.http.services.fastapi.loadbalancer.server.port=80"
 
   db:
     image: postgres:15-alpine
@@ -53,8 +53,6 @@ services:
       - 443:443 # HTTPS
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-
-      # Persist certificates issued by Let's Encrypt
       - "./traefik-public-certificates:/certificates"   
 
     command:
