tagged the right runner

--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -141,7 +141,7 @@ deploy_prod:
 deploy_to_production:
   stage: secure_deploy_prod
   tags: 
-    - runner_fastapi_project_second
+    - runner_fastapi_project
   image: docker:27-cli
   before_script:
     - echo "Preparing Traefik certificate folder..."
