curl to http added

--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -181,9 +181,11 @@ deploy_to_production:
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
     - sleep 20
     - docker-compose ps
+    - docker-compose logs traefik | grep acme
     - echo "Checking HTTPS on main app route"
     #- docker-compose exec traefik curl -vk https://web:80/
     - DOMAIN=fastapi-traefik.prod-fastapi.ip-ddns.com
+    - curl -I "http://$DOMAIN" || (echo "public HTTP failed" && exit 1)
     - curl -k "https://$DOMAIN/" || (echo "public HTTPS failed" && exit 1)
     - echo "Check SSL certificate info"
     - openssl s_client -servername "$DOMAIN" -connect "$DOMAIN:443" </dev/null 2>/dev/null | openssl x509 -noout -issuer -subject -dates
